--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,10 +8,14 @@
         "build": "tsc -p ."
     },
     "devDependencies": {
+        "@types/node": "^20.12.13",
+        "prisma": "^5.14.0",
+        "ts-node": "^10.9.2",
         "tsc-watch": "^6.2.0",
         "typescript": "^5.4.5"
     },
     "dependencies": {
+        "@prisma/client": "^5.14.0",
         "ioredis": "^5.4.1",
         "socket.io": "^4.7.5"
     }
